mass commit with more or less important changes
Signed-off-by: Wiktor Strzębała <wiktorek140@tlen.pl>
Change-Id: I3c9f0997c6cf213bd4d6f2c5973a0f237b51cf54

--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -9,7 +9,7 @@ on boot
 
 on init
     # Set Hardware properties
-    setprop ro.product.model ${ro.boot.hardware.sku}
+    setprop ro.product.model "Moto G5S (${ro.boot.hardware.sku})"
     setprop ro.product.name montana
 
     # Variant properties
